# Simple_WPA_Simulator

./: .flake8  README.md  pyproject.toml
simple_wpa_simulator/: simulator.py  stack_dataloader.py
simple_wpa_simulator/commands/: generate_stack.py
src/simple_wpa_simulator/: __init__.py  gemmi_utils.py  parser.py  rotation.py  simulator.py  utils.py
src/simple_wpa_simulator/commands/: generate_stack.py
tutorial/: config_generator.json  testing_generator.ipynb
