[tool.poetry]
name = "simple-wpa-simulator"
version = "0.1.0"
description = "Simulates images from structures using the WPA method for single particle cryo-EM. Writes a starfile at the end with CTF information and angles."
authors = ["David Silva Sanchez <david.silva@yale.edu>"]
readme = "README.md"
# license = "MIT"
packages = [{include = "simple_wpa_simulator"}]


[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
mdanalysis = "^2.7.0"
natsort = "^8.4.0"
pandas = "^2.2.2"
starfile = "^0.5.7"
mrcfile = "^1.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-mock = "^3.14.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"

[tool.poetry.group.cpu]
optional = true

[tool.poetry.group.cpu.dependencies]
jax = {extras = ["cpu"], version = "^0.4.27"}
torch = {version = "^2.3.0+cpu", source = "pytorch-cpu-src"}

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
torch = "^2.3.0"
jax = "^0.4.27"


[[tool.poetry.source]]
name = "pytorch-cpu-src"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.scripts]
generate_stack = "simple_wpa_simulator.commands.generate_stack:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
