[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-wpa-simulator"
dynamic = ["version"]
authors = [{ name = "David Silva Sanchez", email = "david.silva@yale.edu" }]
description = "Simulates images from structures using the WPA method for single particle cryo-EM. Writes a starfile at the end with CTF information and angles."
readme = "README.md"
requires-python = ">=3.9"
# license = {file = "LICENSE"}
keywords = ["jax", "cryo-EM", "electron-microscopy"]
classifiers = [
    "Programming Language :: Python :: 3",
]
urls = {repository = "https://github.com/DSilva27/Simple_WPA_Simulator" }

dependencies = [
    "numpy >=1.26.4",
    "matplotlib >=3.8.4",
    "mdanalysis >=2.7.0",
    "natsort >=8.4.0",
    "pandas >=2.2.2",
    "starfile >=0.5.7",
    "mrcfile >=1.5.0",
    "torch"
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
generate_stack = "simple_wpa_simulator.commands.generate_stack:main"


[tool.setuptools]
include-package-data = true
zip-safe = false


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA"
testpaths = [
    "tests"
]

[tool.pyright]
exclude = ["build/**"]